"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-03-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-01-shlib-01-05:
	  Perm'd CHP_BREAK_VALUES.


	* HACKT-00-01-04-main-00-81-01-shlib-01-04:
	  Perm'd CHP_ACTION_DELAYS.
	  TODO: dylib hacalloc, hacflat, hacprsim, and hacchpsim.


	* HACKT-00-01-04-main-00-81-01-shlib-01-03:
	  Perm'd CHPSIM_STATE_UPDATE_BIN_SETS.


2007-03-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-01-shlib-01-02:
	  haccreate is now a executable linked to dynamic library.
	  Initial attempts at installing sub-libraries of libhacktlib.la
		resulted in unexpected intra-library dependencies, 
		will have to revisit later, some notes in Makefile.am.
	  Filtered out bunch of unnecessary headers in recently edited files.
	  More clean-up with committing switches...


	* HACKT-00-01-04-main-00-81-01-shlib-01-01:
	  This branch is for rearranging shared libraries.
	  This revision: 'haco' script is now built as an executable
		using shared library.
		Re-ordered some shlib dependencies, tentatively installing
		a few of them, gradually installing all of them.  
	  New: Object/lang/CHP_visitor.{h,cc}: re-directing all 
		chpsim functions involving CHP nodes through visitor
		interface, which slows down dispatches, but brings 
		better modularity and breaks cyclic library dependence.  
		New switch: CHPSIM_VISIT_EXECUTE in sim/chpsim/devel_switches.h
		Moved DependenceCollector to libhacktsim.la.
	  Added sim/chpsim/EventExecutor.{h,cc}: to encapsulate implementation
		of the old CHP::action::{execute,recheck}.
	  sim/chpsim/StateConstructor now implemented through visitor.
	  Added many explicit template instantiations to AST/ units
		to enable dynamic linking.  
	  main/cflat.cc: cflat_print_alias relocated to
		Object/inst/alias_printer.cc to break cyclic dep.