@@ -1,5 +1,5 @@
 # "src/Makefile.am"
-#	$Id: Makefile.am,v 1.161.2.2 2007/03/10 07:29:42 fang Exp $
+#	$Id: Makefile.am,v 1.161.2.3 2007/03/11 05:13:52 fang Exp $
 
 # .yy for yacc (C++), .ll for lex (C++), 
 # .hchk and .tccchk for standalone header checks
@@ -46,10 +46,10 @@ endif
 
 ########################### main dependencies #################################
 
-bin_PROGRAMS = hackt haco haccreate
-bin_SCRIPTS = hacalloc hflat hacprsim hacchpsim
+bin_PROGRAMS = hackt haco haccreate hacalloc \
+	hacobjdump hflat hacpp hacprsim hacchpsim
 if USE_UNROLL_PHASE
-bin_SCRIPTS += hacunroll
+bin_PROGRAMS += hacunroll
 endif
 
 CLEANFILES += $(bin_SCRIPTS)
@@ -59,7 +59,7 @@ noinst_PROGRAMS = dirgen getopt_test $(UTILPROGRAMS) $(FUNPROGRAMS)
 noinst_SCRIPTS = hackt_persistent_table.sh
 
 # convenience libraries
-# want to install libhackt.la next...
+# want to install libhackt.la next... but causes undefined symbols...
 noinst_LTLIBRARIES = libhackt.la \
 	$(UTILLIBS) libhacktexec.la libhacktinstref.la \
 	libhacktcommon.la $(FUNLIBS) \
@@ -88,11 +88,23 @@ haco_LDADD = libhacktlib.la
 #	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` compile \"$$""@\"" ;} > $@ ; \
 #	$(CHMOD) +x $@
 
+hacobjdump_SOURCES = main/objdump.cc
+hacobjdump_CXXFLAGS = -DWITH_MAIN
+hacobjdump_LDADD = libhacktlib.la
+
+hacpp_SOURCES = main/flatten.cc
+hacpp_CXXFLAGS = -DWITH_MAIN
+hacpp_LDADD = libhacktlib.la
+
 if USE_UNROLL_PHASE
-hacunroll: $(top_builddir)/config.status
-	@{ $(ECHO) "#!$(SH_PATH)" ; \
-	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` unroll \"$$""@\"" ;} > $@ ; \
-	$(CHMOD) +x $@
+hacunroll_SOURCES = main/unroll.cc
+hacunroll_CXXFLAGS = -DWITH_MAIN
+hacunroll_LDADD = libhacktlib.la
+
+# hacunroll: $(top_builddir)/config.status
+#	@{ $(ECHO) "#!$(SH_PATH)" ; \
+#	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` unroll \"$$""@\"" ;} > $@ ; \
+#	$(CHMOD) +x $@
 endif
 
 haccreate_SOURCES = main/create.cc
@@ -104,25 +116,43 @@ haccreate_LDADD = libhacktlib.la
 #	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` create \"$$""@\"" ;} > $@ ; \
 #	$(CHMOD) +x $@
 
-hacalloc: $(top_builddir)/config.status
-	@{ $(ECHO) "#!$(SH_PATH)" ; \
-	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` alloc \"$$""@\"" ;} > $@ ; \
-	$(CHMOD) +x $@
+hacalloc_SOURCES = main/alloc.cc
+hacalloc_CXXFLAGS = -DWITH_MAIN
+hacalloc_LDADD = libhacktlib.la
 
-hflat: $(top_builddir)/config.status
-	@{ $(ECHO) "#!$(SH_PATH)" ; \
-	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` cflat \"$$""@\"" ;} > $@ ; \
-	$(CHMOD) +x $@
+# hacalloc: $(top_builddir)/config.status
+#	@{ $(ECHO) "#!$(SH_PATH)" ; \
+#	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` alloc \"$$""@\"" ;} > $@ ; \
+#	$(CHMOD) +x $@
 
-hacprsim: $(top_builddir)/config.status
-	@{ $(ECHO) "#!$(SH_PATH)" ; \
-	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` prsim \"$$""@\"" ;} > $@ ; \
-	$(CHMOD) +x $@
+hflat_SOURCES = main/cflat.cc
+hflat_CXXFLAGS = -DWITH_MAIN
+hflat_LDADD = libhacktlib.la
 
-hacchpsim: $(top_builddir)/config.status
-	@{ $(ECHO) "#!$(SH_PATH)" ; \
-	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` chpsim \"$$""@\"" ;} > $@ ; \
-	$(CHMOD) +x $@
+# hflat: $(top_builddir)/config.status
+#	@{ $(ECHO) "#!$(SH_PATH)" ; \
+#	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` cflat \"$$""@\"" ;} > $@ ; \
+#	$(CHMOD) +x $@
+
+hacprsim_SOURCES = main/prsim.cc
+hacprsim_CXXFLAGS = -DWITH_MAIN
+hacprsim_LDADD = libhacktsim.la
+# goal: reduce to libhacktsim.la
+
+# hacprsim: $(top_builddir)/config.status
+#	@{ $(ECHO) "#!$(SH_PATH)" ; \
+#	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` prsim \"$$""@\"" ;} > $@ ; \
+#	$(CHMOD) +x $@
+
+hacchpsim_SOURCES = main/chpsim.cc
+hacchpsim_CXXFLAGS = -DWITH_MAIN
+hacchpsim_LDADD = libhacktsim.la
+# goal: reduce to libhacktsim.la
+
+# hacchpsim: $(top_builddir)/config.status
+#	@{ $(ECHO) "#!$(SH_PATH)" ; \
+#	$(ECHO) "exec $(bindir)/`$(INSTALL_TRANSFORM_SH) hackt` chpsim \"$$""@\"" ;} > $@ ; \
+#	$(CHMOD) +x $@
 
 # this name is needed for libtool objects
 LIBHACKTPARSERS_LA = libhacktparsers_la
