@@ -3,7 +3,7 @@
 	Converts HAC source code to an object file (pre-unrolled).
 	This file was born from "art++2obj.cc" in earlier revision history.
 
-	$Id: flatten.cc,v 1.1 2006/11/15 00:08:55 fang Exp $
+	$Id: flatten.cc,v 1.1.18.1 2007/03/11 05:13:55 fang Exp $
  */
 
 #include <iostream>
@@ -14,6 +14,7 @@
 #include "main/flatten.h"
 #include "main/main_funcs.h"
 #include "main/compile_options.h"
+#include "main/global_options.h"
 #include "lexer/file_manager.h"
 #include "util/getopt_portable.h"
 #include "util/getopt_mapped.h"
@@ -63,8 +64,10 @@ flatten::name[] = "flatten";
 const char
 flatten::brief_str[] = "Flattens HAC source to single file (stdout).";
 
+#ifndef	WITH_MAIN
 const size_t
 flatten::program_id = register_hackt_program_class<flatten>();
+#endif
 
 /**
 	Options modifier map must be initialized before any registrations.  
@@ -257,32 +260,16 @@ flatten::usage(void) {
 }
 
 //=============================================================================
-// class flatten_options method definitions
-
-#if 0
-void
-flatten_options::export_include_paths(file_manager& fm) const {
-	typedef	include_paths_type::const_iterator	const_iterator;
-	const_iterator i(include_paths.begin());
-	const const_iterator e(include_paths.end());
-	for ( ; i!=e; i++) {
-		const string& s(*i);
-		// check if path exists, otherwise, don't bother adding...
-		if (util::dir_exists(s.c_str())) {
-			fm.add_path(s);
-			if (dump_include_paths) {
-				cerr << "Added to search path: " << s << endl;
-			}
-		} else {
-			if (dump_include_paths) {
-				cerr << "Couldn\'t open dir: " << s << endl;
-			}
-		}
-	}
-}
-#endif
-
-//=============================================================================
-
 }	// end namespace HAC
+
+#ifdef	WITH_MAIN
+/**
+	Assumes no global hackt options.  
+ */
+int
+main(const int argc, char* argv[]) {
+	const HAC::global_options g;
+	return HAC::flatten::main(argc, argv, g);
+}
+#endif	// WITH_MAIN
 
