@@ -1,5 +1,11 @@
 # "test/ChangeLog"
 
+2007-03-11	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-01-shlib-01-06:
+	  Remaining programs now use dynamically linked executables.  
+
+
 2007-03-09	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-01-shlib-01-02:
